Adding description to the emergency vehicle section

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Portfolio Blog</h1>
+            <h1>Portfolio - Adam Robinson</h1>
             <p>Advancing Technology Through Innovation</p>
             <div class="subtitle">A journey through my software engineering projects</div>
         </div>
@@ -393,10 +393,6 @@
                     <div class="stat-label">Real-time Processing</div>
                 </div>
                 <div class="stat">
-                    <div class="stat-number">3</div>
-                    <div class="stat-label">Vehicle Classes</div>
-                </div>
-                <div class="stat">
                     <div class="stat-number">1000+</div>
                     <div class="stat-label">Training Images</div>
                 </div>
@@ -422,34 +418,9 @@
                 </div>
             </div>
 
-            <div class="image-grid">
-                <div class="image-item">
-                    <div class="image-placeholder" style="background: linear-gradient(45deg, #333, #1a1a1a);">
-                        Police Vehicle Detection
-                    </div>
-                </div>
-                <div class="image-item">
-                    <div class="image-placeholder" style="background: linear-gradient(45deg, #2a2a2a, #1a1a1a);">
-                        Ambulance Detection
-                    </div>
-                </div>
-                <div class="image-item">
-                    <div class="image-placeholder" style="background: linear-gradient(45deg, #333, #2a2a2a);">
-                        Fire Truck Detection
-                    </div>
-                </div>
-                <div class="image-item">
-                    <div class="image-placeholder" style="background: linear-gradient(45deg, #1a1a1a, #333);">
-                        Multi-vehicle Scenarios
-                    </div>
-                </div>
+            <div style="text-align: center;">
+                <p> This project was used for my university final year dissertation piece. In this project I worked in Python using various libraries to develop a working implementation. I first developed and trained my own model. This consisted of my scannign the internet for images of emergency vehicles with emergency lights on. I then went through over a thousand of these images labelling where I saw eergency vehicles and making sure that they were correctly circled. This was then passed into the training software I developed based on the YOLOv5 model. This then took over a day for my computer to process the images and work through around 80 epochs before the training stagnated. Then model was then used in conjunction with another one I had created to create a fusion level AI algorithm that correctly identified emergency vehicles in over 95% of cases.</p>
             </div>
-
-            <!--div style="text-align: center;">
-                <a href="#" class="github-link">
-                    🔗 View on GitHub
-                </a>
-            </div-->
         </article>
 
         <!-- Template for your next blog post - copy this structure -->
